docs: add full swagger api documentation
